samples/_failures_safe/1761403679_caa445_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c0d307e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_4c0d307e.c:173:9: error: expected expression at end of input
  173 |         case TOKEN_IDENTIFIER: return
      |         ^~~~
./samples/SAFE/__tmp_4c0d307e.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c0d307e.c:173:9: error: expected declaration or statement at end of input
